# inventory-management-system

./: Dockerfile  README.md  pyproject.toml
inventory_management_system/: inventory.py  main.py  product.py  user.py
